# ls-lint

./: .bazelrc  .drone.yml  .gitignore  .ls-lint-2.yml  .ls-lint.yml  .pre-commit-hooks.yaml  AI_POLICY.md  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  config.go  config_test.go  error.go  go.mod  go.sum  linter.go  linter_test.go  ls-lint  main.go  main_test.go  os.go  os_test.go  read_config_file.go  read_config_file_test.go  repositories.bzl  rule.go  rule_camelcase.go  rule_camelcase_test.go  rule_kebabcase.go  rule_kebabcase_test.go  rule_lowercase.go  rule_lowercase_test.go  rule_pascalcase.go  rule_pascalcase_test.go  rule_pointcase.go  rule_pointcase_test.go  rule_regex.go  (+8 more)
.github/: FUNDING.yml
.github/workflows/: bazel.yml  github-action.yml
cmd/ls_lint/: BUILD.bazel  main.go  target.bzl
deployments/docker/: BUILD.bazel  Dockerfile  Dockerfile.arm64  auth  manifest.tmpl
deployments/github/: BUILD.bazel  github.sh
deployments/npm/: .npmrc  BUILD.bazel  package.json  pnpm.sh
docker/: Dockerfile  Dockerfile.arm64
examples/nextjs_typescript_monorepo/: .ls-lint.yml
examples/nuxt_nuxt_js/: .ls-lint.yml
examples/vuejs-vue/: .ls-lint.yml
examples/vuejs-vue-next/: .ls-lint.yml
internal/config/: BUILD.bazel  config.go  config_test.go
internal/debug/: BUILD.bazel  statistic.go
internal/flag/: BUILD.bazel  config.go
internal/glob/: BUILD.bazel  glob.go
internal/linter/: BUILD.bazel  linter.go  linter_test.go
internal/rule/: BUILD.bazel  camelcase.go  camelcase_test.go  disallow.go  disallow_test.go  error.go  exists.go  exists_test.go  flatcase.go  flatcase_test.go  kebabcase.go  kebabcase_test.go  lowercase.go  lowercase_test.go  not_regex.go  not_regex_test.go  pascalcase.go  pascalcase_test.go  pascalcaseacronym.go  pascalcaseacronym_test.go  pointcase.go  pointcase_test.go  regex.go  regex_test.go  required.go  required_test.go  rule.go  rule_test.go  screamingsnakecase.go  screamingsnakecase_test.go  snakecase.go  snakecase_test.go  uppercasedigit.go  uppercasedigit_test.go
npm/: package.json
npm/ls-lint/: package.json  postinstall.js
npm/ls-lint-darwin/: package.json
npm/ls-lint-linux/: package.json
scripts/bazel/: workspace_status.sh
tools/format/: BUILD.bazel
