load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "nogo")

# gazelle:prefix github.com/loeffel-io/ls-lint/v2
# gazelle:exclude vendor
# gazelle:exclude .idea
gazelle(name = "gazelle")

gazelle(
    name = "gazelle_fix_diff",
    command = "fix",
    extra_args = ["--mode=diff"],
)

config_setting(
    name = "darwin_arm64",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:arm64",
    ],
    visibility = ["//visibility:public"],
)

nogo(
    name = "nogo",
    config = ":nogo.json",
    visibility = ["//visibility:public"],
    deps = [],  # TOOLS_NOGO: https://github.com/bazel-contrib/rules_go/issues/3924
)

exports_files(
    srcs = [
        "LICENSE",
        "README.md",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "gh",
    actual = select({
        ":darwin_arm64": "@com_github_cli_cli_darwin_arm64//:bin/gh",
        "//conditions:default": "@com_github_cli_cli_linux_amd64//:bin/gh",
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "coreutils",
    actual = select({
        ":darwin_arm64": "@com_github_uutils_coreutils_darwin_arm64//:coreutils",
        "//conditions:default": "@com_github_uutils_coreutils_linux_amd64//:coreutils",
    }),
    visibility = ["//visibility:public"],
)
