load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ls_lint_lib",
    srcs = ["main.go"],
    importpath = "github.com/loeffel-io/ls-lint/v2/cmd/ls_lint",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/config",
        "//internal/debug",
        "//internal/linter",
        "//internal/rule",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_binary(
    name = "ls-lint",
    embed = [":ls_lint_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {"Version": "{STABLE_GIT_TAG}"},
)

go_binary(
    name = "ls-lint-darwin-arm64",
    embed = [":ls_lint_lib"],
    goarch = "arm64",
    goos = "darwin",
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {"Version": "{STABLE_GIT_TAG}"},
)

go_binary(
    name = "ls-lint-darwin-amd64",
    embed = [":ls_lint_lib"],
    goarch = "amd64",
    goos = "darwin",
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {"Version": "{STABLE_GIT_TAG}"},
)

go_binary(
    name = "ls-lint-linux-arm64",
    embed = [":ls_lint_lib"],
    goarch = "arm64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {"Version": "{STABLE_GIT_TAG}"},
)

go_binary(
    name = "ls-lint-linux-amd64",
    embed = [":ls_lint_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {"Version": "{STABLE_GIT_TAG}"},
)

go_binary(
    name = "ls-lint-linux-s390x",
    embed = [":ls_lint_lib"],
    goarch = "s390x",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {"Version": "{STABLE_GIT_TAG}"},
)

go_binary(
    name = "ls-lint-linux-ppc64le",
    embed = [":ls_lint_lib"],
    goarch = "ppc64le",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {"Version": "{STABLE_GIT_TAG}"},
)

go_binary(
    name = "ls-lint-windows-amd64",
    embed = [":ls_lint_lib"],
    goarch = "amd64",
    goos = "windows",
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {"Version": "{STABLE_GIT_TAG}"},
)
