load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/loeffel-io/ls-lint/v2/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/rule",
        "@com_github_bmatcuk_doublestar_v4//:doublestar",
    ],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    embed = [":config"],
    deps = ["//internal/rule"],
)
