load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "linter",
    srcs = ["linter.go"],
    importpath = "github.com/loeffel-io/ls-lint/v2/internal/linter",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/debug",
        "//internal/glob",
        "//internal/rule",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "linter_test",
    srcs = ["linter_test.go"],
    embed = [":linter"],
    race = select({
        "//:darwin_arm64": "on",
        "//:linux_amd64": "on",
        # Error in fail: race instrumentation can't be enabled when cgo is disabled. Check that pure is not set to "off" and a C/C++ toolchain is configured.
        "//:windows_amd64": "off",
    }),
    deps = [
        "//internal/config",
        "//internal/debug",
        "//internal/rule",
    ],
)
