# load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
#
# # https://github.com/aspect-build/rules_lint/issues/548
# format_multirun(
#     name = "format",
#     go = "@aspect_rules_lint//format:gofumpt",
#     target_compatible_with = select({
#         "@platforms//os:osx": [],
#         "@platforms//os:linux": [],
#         "//conditions:default": ["@platforms//:incompatible"],
#     }),
#     visibility = ["//visibility:public"],
# )
